[package]
name = "apex"
version = "0.1.0"
authors = ["tianen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
serde = { version = "*"  , features = ["derive"] }
bincode = "*"