[package]
name = "apex"
version = "0.1.0"
authors = ["tianen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.0.1" , features = ["unstable"] }
futures = "0.3.1"
serde = { version = "*"  , features = ["derive"] }
bincode = "*"