[package]
name = "apex"
version = "0.1.0"
authors = ["tianen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.2.0" , features = ["unstable"] }
futures = "0.3.1"
serde = { version = "1.0.103"  , features = ["derive"] }
bincode = "1.2.0"
log = "0.4"
env_logger = "0.7.1"
rand = "0.7.2"